add api for dish and ingredients