@@ -5,6 +5,7 @@ import com.conal.dishbuilder.dto.request.CreateTenantRequest;
 import com.conal.dishbuilder.dto.request.UpdateTenantRequest;
 import com.conal.dishbuilder.dto.response.FieldErrorResponse;
 import com.conal.dishbuilder.repository.TenantRepository;
+import com.conal.dishbuilder.util.CommonUtils;
 import jakarta.validation.ConstraintViolation;
 import jakarta.validation.Validator;
 import lombok.RequiredArgsConstructor;
@@ -13,6 +14,9 @@ import org.springframework.stereotype.Component;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Set;
+import java.util.stream.Collectors;
+
+import static com.conal.dishbuilder.util.CommonUtils.buildFieldErrorResponse;
 
 @Component
 @RequiredArgsConstructor
@@ -22,12 +26,10 @@ public class TenantValidatorImpl implements TenantValidator {
 
     @Override
     public List<FieldErrorResponse> validateCreateTenant(CreateTenantRequest request) {
-        List<FieldErrorResponse> fieldErrors = new ArrayList<>();
         Set<ConstraintViolation<Object>> violations = validator.validate(request);
-        if (!violations.isEmpty()) {
-            fieldErrors.addAll(violations.stream()
-                    .map(this::buildFieldErrorResponse).toList());
-        }
+        var fieldErrors = violations.stream()
+                .map(CommonUtils::buildFieldErrorResponse).collect(Collectors.toList());
+
         if (tenantRepository.existsByUrlSlug(request.getUrlSlug())) {
             fieldErrors.add(buildFieldErrorResponse("urlSlug", request.getUrlSlug(), "Url Slug already exists."));
         }
@@ -42,12 +44,9 @@ public class TenantValidatorImpl implements TenantValidator {
 
     @Override
     public List<FieldErrorResponse> validateUpdateTenant(UpdateTenantRequest request, TenantEntity tenantEntity) {
-        List<FieldErrorResponse> fieldErrors = new ArrayList<>();
         Set<ConstraintViolation<Object>> violations = validator.validate(request);
-        if (!violations.isEmpty()) {
-            fieldErrors.addAll(violations.stream()
-                    .map(this::buildFieldErrorResponse).toList());
-        }
+        var fieldErrors = violations.stream()
+                .map(CommonUtils::buildFieldErrorResponse).collect(Collectors.toList());
         if (!tenantEntity.getEmail().equals(request.getEmail()) && tenantRepository.existsByEmail(request.getEmail())) {
             fieldErrors.add(buildFieldErrorResponse("email", request.getEmail(), "Email already exists."));
         }
@@ -55,21 +54,5 @@ public class TenantValidatorImpl implements TenantValidator {
             fieldErrors.add(buildFieldErrorResponse("name", request.getName(), "Name already exists."));
         }
         return fieldErrors;
-    }
-
-    private FieldErrorResponse buildFieldErrorResponse(ConstraintViolation<Object> request) {
-        return FieldErrorResponse.builder()
-                .setField(request.getPropertyPath().toString()) // tên field bị lỗi
-                .setRejectedValue(request.getInvalidValue() != null ? request.getInvalidValue().toString() : null) // giá trị bị reject
-                .setMessage(request.getMessage()) // message từ @NotBlank, @Email,...
-                .build();
-    }
-
-    private FieldErrorResponse buildFieldErrorResponse(String field, String rejectedValue, String message) {
-        return FieldErrorResponse.builder()
-                .setMessage(message)
-                .setRejectedValue(rejectedValue)
-                .setField(field)
-                .build();
     }
 }
